--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Phenerium</title>
 </head>
 
-<body class="bg-custom-bg">
+<body className="min-h-screen overflow-hidden">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
