--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Phenerium</title>
 </head>
 
-<body className="min-h-screen overflow-hidden">
+<body className="min-h-screen overflow-hidden bg-[black]">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
